// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lightning-button aria-attributes should be present and true 1`] = `
<lightning-button>
  #shadow-root(open)
    <button
      aria-atomic="true"
      aria-expanded="true"
      class="slds-button slds-button_neutral"
      title="Click here"
      type="button"
    >
      Test
    </button>
</lightning-button>
`;

exports[`lightning-button should set not set any aria-attributes 1`] = `
<lightning-button
  tabindex="-1"
>
  #shadow-root(open)
    <button
      class="slds-button slds-button_neutral"
      title="Click here"
      type="button"
    >
      Test
    </button>
</lightning-button>
`;
